--- a/index.html
+++ b/index.html
@@ -1,7 +1,26 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Your Website Title</title>
+    <link rel="stylesheet" href="styles.css">
+</head>
 <body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
+
+    <header>
+        <!-- Your header content -->
+    </header>
+
+    <main>
+        <!-- Main content of your website -->
+    </main>
+
+    <footer>
+        <!-- Your footer content -->
+    </footer>
+
+    <script src="script.js"></script>
 </body>
 </html>
