--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
 <body>
 
     <header>
-        <h1>Your Name</h1>
-        <p>Programmer & Cybersecurity Enthusiast</p>
+        <p> Hi, I'm</p>
+        <h1>Frank Trani</h1>
+        <p>A Programmer & Cybersecurity Enthusiast</p>
     </header>
 
     <section id="skills">
