--- a/index.html
+++ b/index.html
@@ -7,35 +7,28 @@
 <body>
 
     <header>
-        <p> Hi, I'm</p>
-        <h1>Frank Trani</h1>
-        <p>A Programmer & Cybersecurity Enthusiast</p>
+        <h1>Your Name</h1>
+        <p>Programmer & Cybersecurity Enthusiast</p>
     </header>
 
     <section id="skills">
         <h2>Skills</h2>
         <div class="skill-category">
             <h3>Programming Languages</h3>
-            <ul>
-                <li>Python</li>
-                <li>Javascript</li>
-                <li>HTML</li>
-                <li>CSS</li>
-                <li>C</li>
-            </ul>
+            <div class="skill-box">Python</div>
+            <div class="skill-box">Javascript</div>
+            <div class="skill-box">HTML</div>
+            <div class="skill-box">CSS</div>
+            <div class="skill-box">C</div>
         </div>
         <div class="skill-category">
             <h3>Databases</h3>
-            <ul>
-                <li>MySQL</li>
-                <li>MongoDB</li>
-            </ul>
+            <div class="skill-box">MySQL</div>
+            <div class="skill-box">MongoDB</div>
         </div>
         <div class="skill-category">
             <h3>Frameworks</h3>
-            <ul>
-                <li>Flask</li>
-            </ul>
+            <div class="skill-box">Flask</div>
         </div>
     </section>
 
@@ -44,7 +37,9 @@
     </section>
 
     <section id="contact">
-        <!-- Add your contact information here -->
+        <a href="mailto:franktrani7887@gmail.com?subject=Contact%20from%20Portfolio" class="contact-button">
+            Contact Me
+        </a>
     </section>
 
 </body>
