--- a/index.html
+++ b/index.html
@@ -3,12 +3,15 @@
 <head>
     <title>Your Portfolio</title>
     <link rel="stylesheet" type="text/css" href="styles.css">
+    <script src="script.js"></script>
 </head>
 <body>
 
     <header>
-        <h1>Your Name</h1>
-        <p>Programmer & Cybersecurity Enthusiast</p>
+        <h1>Hi, I'm Frank Trani</h1>
+        <h2>A Programmer & Cybersecurity Enthusiast</h2>
+        
+        <p>I am <span id="age"></span> years old and enjoy Cybersecurity, robotics, and app development. I have been programming for <span id="yearsProgramming"></span> years.</p>
     </header>
 
     <section id="skills">
