added light/dark mode

--- a/index.html
+++ b/index.html
@@ -8,9 +8,10 @@
 <body>
 
     <header>
+        <button id="themeToggle">Toggle Dark Mode</button>
         <h1>Hi, I'm Frank Trani</h1>
         <h2>A Programmer & Cybersecurity Enthusiast</h2>
-        
+
         <p>I am <span id="age"></span> years old and enjoy Cybersecurity, robotics, and app development. I have been programming for <span id="yearsProgramming"></span> years.</p>
     </header>
 
