--- a/index.html
+++ b/index.html
@@ -5,10 +5,15 @@
     <link rel="stylesheet" type="text/css" href="styles.css">
     <script src="script.js"></script>
 </head>
-<body>
+<body id="home">
+    <nav id="top-nav">
+        <a href="#home" class="nav-button">Home</a>
+        <a href="#projects" class="nav-button">Projects</a>
+        <a href="#links" class="nav-button">Links</a>
+        <button id="themeToggle"><span id="themeIcon">🌙</span></button>
+    </nav>
 
     <header>
-        <button id="themeToggle">Toggle Dark Mode</button>
         <h1>Hi, I'm Frank Trani</h1>
         <h2>A Programmer & Cybersecurity Enthusiast</h2>
 
