--- a/index.html
+++ b/index.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Your Portfolio</title>
+    <title>Frank Trani's Portfolio</title>
     <link rel="stylesheet" type="text/css" href="styles.css">
     <script src="script.js"></script>
 </head>
-<body id="home">
+<body id>
     <nav id="top-nav">
-        <a href="#home" class="nav-button">Home</a>
-        <a href="#projects" class="nav-button">Projects</a>
-        <a href="#links" class="nav-button">Links</a>
+        <a href="links.html" class="nav-button">Links</a>
+        <a href="projects.html" class="nav-button">Projects</a>
+        <a href="index.html" class="nav-button active">Home</a>
         <button id="themeToggle"><span id="themeIcon">🌙</span></button>
     </nav>
 
@@ -39,10 +39,6 @@
             <h3>Frameworks</h3>
             <div class="skill-box">Flask</div>
         </div>
-    </section>
-
-    <section id="projects">
-        <!-- Add your projects here -->
     </section>
 
     <section id="contact">
