--- a/index.html
+++ b/index.html
@@ -3,14 +3,15 @@
 <head>
     <title>Frank Trani's Portfolio</title>
     <link rel="stylesheet" type="text/css" href="styles.css">
+    <!-- <link rel="stylesheet" type="text/css" href="backup.css"> -->
     <script src="script.js"></script>
 </head>
 <body id>
     <nav id="top-nav">
-        <a href="links.html" class="nav-button">Links</a>
-        <a href="projects.html" class="nav-button">Projects</a>
+        <button id="themeToggle"><span id="themeIcon">☀️</span></button>
         <a href="index.html" class="nav-button active">Home</a>
-        <button id="themeToggle"><span id="themeIcon">🌙</span></button>
+        <a href="projects.html" class="nav-button ">Projects</a>
+        <a href="links.html" class="nav-button">Links</a>
     </nav>
 
     <header>
@@ -21,7 +22,7 @@
     </header>
 
     <section id="skills">
-        <h2>Skills</h2>
+        <h2>My Tech Stack</h2>
         <div class="skill-category">
             <h3>Programming Languages</h3>
             <div class="skill-box">Python</div>
