--- a/links.html
+++ b/links.html
@@ -3,18 +3,15 @@
 <head>
     <title>Links - Frank Trani</title>
     <link rel="stylesheet" type="text/css" href="styles.css">
+    <script src="script.js"></script>
 </head>
-<body data-theme="dark">
-
-    <!-- Navigation Bar -->
-    <div id="top-nav">
-        <button id="themeToggle">
-            <span id="themeIcon">&#x2600;</span>  <!-- Sun icon -->
-        </button>
+<body id>
+    <nav id="top-nav">
+        <button id="themeToggle"><span id="themeIcon">☀️</span></button>
+        <a href="index.html" class="nav-button">Home</a>
         <a href="projects.html" class="nav-button">Projects</a>
         <a href="links.html" class="nav-button active">Links</a>
-        <a href="index.html" class="nav-button">Home</a>
-    </div>
+    </nav>
 
     <header>
         <h1>Links</h1>
@@ -24,14 +21,14 @@
         <h2>My Links</h2>
         <div class="link-preview">
             <a href="https://github.com/Schizzle13" target="_blank">
-                <img src="github-icon.png" alt="GitHub">
-                <span>Github</span>
+                <img src="github-mark.png" alt="GitHub">
+                <span></span>
             </a>
         </div>
         <div class="link-preview">
             <a href="https://www.youtube.com/@FrankTrani" target="_blank">
                 <img src="youtube-icon.png" alt="YouTube">
-                <span>YouTube</span>
+                <span></span>
             </a>
         </div>
         <!-- Add more links here -->
