--- a/projects.html
+++ b/projects.html
@@ -5,14 +5,12 @@
     <link rel="stylesheet" type="text/css" href="styles.css">
     <script src="script.js"></script>
 </head>
-<body data-theme="dark">
-
-    <!-- Navigation Bar -->
-<nav id="top-nav">
-        <a href="links.html" class="nav-button">Links</a>
-        <a href="projects.html" class="nav-button active">Projects</a>
+<body id>
+    <nav id="top-nav">
+        <button id="themeToggle"><span id="themeIcon">☀️</span></button>
         <a href="index.html" class="nav-button">Home</a>
-        <button id="themeToggle"><span id="themeIcon">🌙</span></button>
+        <a href="projects.html" class="nav-button active">Projects</a>
+        <a href="links.html" class="nav-button">Links</a>
     </nav>
 
 
@@ -23,9 +21,18 @@
     <section id="projects">
         <h2>My Projects</h2>
         <ul id="project-list">
-            <li><a href="https://github.com/yourusername/project1" target="_blank">Project 1</a></li>
-            <li><a href="https://github.com/yourusername/project2" target="_blank">Project 2</a></li>
-            <!-- Add more projects here -->
+            <li><a href="https://github.com/yourusername/project1" target="_blank">1</a></li>
+            <li><a href="https://github.com/yourusername/project2" target="_blank">2</a></li>
+            <li><a href="https://github.com/yourusername/project2" target="_blank">3</a></li>
+            <li><a href="https://github.com/yourusername/project2" target="_blank">4</a></li>
+            <li><a href="https://github.com/yourusername/project2" target="_blank">5</a></li>
+            <li><a href="https://github.com/yourusername/project2" target="_blank">6</a></li>
+            <li><a href="https://github.com/yourusername/project2" target="_blank">7</a></li>
+            <li><a href="https://github.com/yourusername/project2" target="_blank">8</a></li>
+            <li><a href="https://github.com/yourusername/project2" target="_blank">9</a></li>
+            <li><a href="https://github.com/yourusername/project2" target="_blank">10</a></li>
+
+
         </ul>
     </section>
 
