--- a/index.html
+++ b/index.html
@@ -7,19 +7,26 @@
     <script src="script.js"></script>
 </head>
 <body id>
-    <nav id="top-nav">
-        <button id="themeToggle"><span id="themeIcon">☀️</span></button>
-        <a href="index.html" class="nav-button active">Home</a>
-        <a href="projects.html" class="nav-button ">Projects</a>
-        <a href="links.html" class="nav-button">Links</a>
-    </nav>
+    
 
     <header>
-        <h1>Hi, I'm Frank Trani</h1>
+    <nav id = "swap">
+        <button id="themeToggle"><span id="themeIcon">☀️</span></button>
+    </nav>
+        
+        <nav id="top-nav">
+            <a href="index.html" class="nav-button active">Home</a>
+            <a href="projects.html" class="nav-button ">Projects</a>
+            <a href="links.html" class="nav-button">Links</a>
+        </nav>
+    </header>
+
+    <section id="Name">
+    <h1>Hi, I'm Frank Trani</h1>
         <h2>A Programmer & Cybersecurity Enthusiast</h2>
 
         <p>I am <span id="age"></span> years old and enjoy Cybersecurity, robotics, and app development. I have been programming for <span id="yearsProgramming"></span> years.</p>
-    </header>
+    </section>
 
     <section id="skills">
         <h2>My Tech Stack</h2>
