--- a/links.html
+++ b/links.html
@@ -20,9 +20,9 @@
         </nav>
             
             <nav id="top-nav">
-                <a href="index.html" class="nav-button active">Home</a>
+                <a href="index.html" class="nav-button ">Home</a>
                 <a href="projects.html" class="nav-button ">Projects</a>
-                <a href="links.html" class="nav-button">Links</a>
+                <a href="links.html" class="nav-button active">Links</a>
             </nav>
         </header>
 
