--- a/projects.html
+++ b/projects.html
@@ -20,8 +20,8 @@
         </nav>
             
             <nav id="top-nav">
-                <a href="index.html" class="nav-button active">Home</a>
-                <a href="projects.html" class="nav-button ">Projects</a>
+                <a href="index.html" class="nav-button">Home</a>
+                <a href="projects.html" class="nav-button active">Projects</a>
                 <a href="links.html" class="nav-button">Links</a>
             </nav>
         </header>
