--- a/projects.html
+++ b/projects.html
@@ -1,53 +1,116 @@
 <!DOCTYPE html>
 <html>
-<head>
-    <title>Projects - Frank Trani</title>
-    <link rel="stylesheet" type="text/css" href="styles.css">
-    <script src="script.js"></script>
-</head>
-<body id>
-    <header>
-        <nav id = "swap">
-            <label class="switch-button" for="switch" onclick="toggleTheme()">
-                <div class="switch-outer">
-                  <input id="themeToggle" type="checkbox">
-                  <div class="button">
-                    <span class="button-toggle" id = "themeIcon">☀️</span>
-                    <span class="button-indicator"></span>
-                  </div>
-                </div>
-              </label>
-        </nav>
-            
-            <nav id="top-nav">
-                <a href="index.html" class="nav-button">Home</a>
-                <a href="projects.html" class="nav-button active">Projects</a>
-                <a href="links.html" class="nav-button">Links</a>
-            </nav>
+    <head>
+        <title>Projects - Frank Trani</title>
+        <link rel="stylesheet" type="text/css" href="styles.css" />
+        <script src="script.js"></script>
+        <meta name="viewport" content="width=device-width,initial-scale=1" />
+    </head>
+    <body>
+        <header>
+            <span>Frank Trani</span>
+
+            <div class="nav-wrapper">
+                <button class="switch-theme" id="switch-theme-btn">
+                    Theme
+                </button>
+
+                <nav class="top-nav">
+                    <ul>
+                        <li>
+                            <a href="index.html" class="nav-button active"
+                                >Home</a
+                            >
+                        </li>
+                        <li>
+                            <a href="projects.html" class="nav-button"
+                                >Projects</a
+                            >
+                        </li>
+                        <li>
+                            <a href="links.html" class="nav-button">Links</a>
+                        </li>
+                    </ul>
+                </nav>
+            </div>
         </header>
 
-
-    <header>
-        <h1>Projects</h1>
-    </header>
-
-    <section id="projects">
-        <h2>My Projects</h2>
-        <ul id="project-list">
-            <li><a href="https://github.com/yourusername/project1" target="_blank">1</a></li>
-            <li><a href="https://github.com/yourusername/project2" target="_blank">2</a></li>
-            <li><a href="https://github.com/yourusername/project2" target="_blank">3</a></li>
-            <li><a href="https://github.com/yourusername/project2" target="_blank">4</a></li>
-            <li><a href="https://github.com/yourusername/project2" target="_blank">5</a></li>
-            <li><a href="https://github.com/yourusername/project2" target="_blank">6</a></li>
-            <li><a href="https://github.com/yourusername/project2" target="_blank">7</a></li>
-            <li><a href="https://github.com/yourusername/project2" target="_blank">8</a></li>
-            <li><a href="https://github.com/yourusername/project2" target="_blank">9</a></li>
-            <li><a href="https://github.com/yourusername/project2" target="_blank">10</a></li>
-
-
-        </ul>
-    </section>
-
-</body>
+        <main class="container">
+            <section class="projects">
+                <h1>My Projects</h1>
+                <ul class="project-list">
+                    <li>
+                        <a
+                            href="https://github.com/yourusername/project1"
+                            target="_blank"
+                            >1</a
+                        >
+                    </li>
+                    <li>
+                        <a
+                            href="https://github.com/yourusername/project2"
+                            target="_blank"
+                            >2</a
+                        >
+                    </li>
+                    <li>
+                        <a
+                            href="https://github.com/yourusername/project2"
+                            target="_blank"
+                            >3</a
+                        >
+                    </li>
+                    <li>
+                        <a
+                            href="https://github.com/yourusername/project2"
+                            target="_blank"
+                            >4</a
+                        >
+                    </li>
+                    <li>
+                        <a
+                            href="https://github.com/yourusername/project2"
+                            target="_blank"
+                            >5</a
+                        >
+                    </li>
+                    <li>
+                        <a
+                            href="https://github.com/yourusername/project2"
+                            target="_blank"
+                            >6</a
+                        >
+                    </li>
+                    <li>
+                        <a
+                            href="https://github.com/yourusername/project2"
+                            target="_blank"
+                            >7</a
+                        >
+                    </li>
+                    <li>
+                        <a
+                            href="https://github.com/yourusername/project2"
+                            target="_blank"
+                            >8</a
+                        >
+                    </li>
+                    <li>
+                        <a
+                            href="https://github.com/yourusername/project2"
+                            target="_blank"
+                            >9</a
+                        >
+                    </li>
+                    <li>
+                        <a
+                            href="https://github.com/yourusername/project2"
+                            target="_blank"
+                            >10</a
+                        >
+                    </li>
+                </ul>
+            </section>
+        </main>
+    </body>
 </html>
