--- a/index.html
+++ b/index.html
@@ -4,22 +4,35 @@
         <title>Frank Trani's Portfolio</title>
         <link rel="stylesheet" type="text/css" href="styles.css" />
         <script src="script.js"></script>
+        <meta name="viewport" content="width=device-width,initial-scale=1" />
     </head>
     <body>
         <header>
             <span>Frank Trani</span>
 
-            <nav class="top-nav">
-                <ul>
-                    <li>
-                        <a href="index.html" class="nav-button active">Home</a>
-                    </li>
-                    <li>
-                        <a href="projects.html" class="nav-button">Projects</a>
-                    </li>
-                    <li><a href="links.html" class="nav-button">Links</a></li>
-                </ul>
-            </nav>
+            <div class="nav-wrapper">
+                <button class="switch-theme" id="switch-theme-btn">
+                    Theme
+                </button>
+
+                <nav class="top-nav">
+                    <ul>
+                        <li>
+                            <a href="index.html" class="nav-button active"
+                                >Home</a
+                            >
+                        </li>
+                        <li>
+                            <a href="projects.html" class="nav-button"
+                                >Projects</a
+                            >
+                        </li>
+                        <li>
+                            <a href="links.html" class="nav-button">Links</a>
+                        </li>
+                    </ul>
+                </nav>
+            </div>
         </header>
 
         <main class="container">
@@ -101,5 +114,25 @@
                 </div>
             </section>
         </main>
+
+        <script>
+            var modal = document.getElementById("contactModal");
+            var btn = document.getElementById("contactBtn");
+            var span = document.getElementsByClassName("close")[0];
+
+            btn.onclick = function () {
+                modal.style.display = "block";
+            };
+
+            span.onclick = function () {
+                modal.style.display = "none";
+            };
+
+            window.onclick = function (event) {
+                if (event.target == modal) {
+                    modal.style.display = "none";
+                }
+            };
+        </script>
     </body>
 </html>
