--- a/links.html
+++ b/links.html
@@ -12,7 +12,7 @@
 
             <div class="nav-wrapper">
                 <button class="switch-theme" id="switch-theme-btn">
-                    Theme
+                    themeicon.textcontent
                 </button>
 
                 <nav class="top-nav">
