--- a/links.html
+++ b/links.html
@@ -1,60 +1,53 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <title>Links - Frank Trani</title>
-        <link rel="stylesheet" type="text/css" href="styles.css" />
-        <script src="script.js"></script>
-        <meta name="viewport" content="width=device-width,initial-scale=1" />
-    </head>
-    <body>
-        <header>
-            <span>Frank Trani</span>
 
-            <div class="nav-wrapper">
-                <button class="switch-theme" id="switch-theme-btn">
-                    themeicon.textcontent
-                </button>
+<head>
+    <title>Links - Frank Trani</title>
+    <link rel="stylesheet" type="text/css" href="styles.css" />
+    <script src="script.js"></script>
+    <meta name="viewport" content="width=device-width,initial-scale=1" />
+</head>
 
-                <nav class="top-nav">
-                    <ul>
-                        <li>
-                            <a href="index.html" class="nav-button active"
-                                >Home</a
-                            >
-                        </li>
-                        <li>
-                            <a href="projects.html" class="nav-button"
-                                >Projects</a
-                            >
-                        </li>
-                        <li>
-                            <a href="links.html" class="nav-button">Links</a>
-                        </li>
-                    </ul>
-                </nav>
+<body>
+    <header>
+        <span>Frank Trani</span>
+
+        <div class="nav-wrapper">
+            <button class="switch-theme" id="switch-theme-btn">
+                themeicon.textcontent
+            </button>
+
+            <nav class="top-nav">
+                <ul>
+                    <li>
+                        <a href="index.html" class="nav-button active">Home</a>
+                    </li>
+                    <li>
+                        <a href="links.html" class="nav-button">Links</a>
+                    </li>
+                </ul>
+            </nav>
+        </div>
+    </header>
+
+    <main class="container">
+        <section class="links">
+            <h1>My Links</h1>
+            <div class="link-preview">
+                <a href="https://github.com/Schizzle13" target="_blank">
+                    <img src="github-mark.png" alt="GitHub" />
+                    <span></span>
+                </a>
             </div>
-        </header>
+            <div class="link-preview">
+                <a href="https://www.youtube.com/@FrankTrani" target="_blank">
+                    <img src="youtube-icon.png" alt="YouTube" />
+                    <span></span>
+                </a>
+            </div>
+            <!-- Add more links here -->
+        </section>
+    </main>
+</body>
 
-        <main class="container">
-            <section class="links">
-                <h1>My Links</h1>
-                <div class="link-preview">
-                    <a href="https://github.com/Schizzle13" target="_blank">
-                        <img src="github-mark.png" alt="GitHub" />
-                        <span></span>
-                    </a>
-                </div>
-                <div class="link-preview">
-                    <a
-                        href="https://www.youtube.com/@FrankTrani"
-                        target="_blank"
-                    >
-                        <img src="youtube-icon.png" alt="YouTube" />
-                        <span></span>
-                    </a>
-                </div>
-                <!-- Add more links here -->
-            </section>
-        </main>
-    </body>
 </html>
