--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
 
     <main class="container">
         <section class="intro">
-            <h1 class="title">Hi, I'm Frank Trani</h1>
+            <h1 class="title">Hi, I'm Frank Trani 👋</h1>
             <h2 class="subtitle">
-                A Programmer & Cybersecurity Enthusiast
+                A Programmer & Cybersecurity Enthusiast.
             </h2>
             <p class="tagline">
                 I am <span id="age"></span> years old and enjoy
